react/kiez-search-profile: fix search profile alignment

--- a/meinberlin/assets/scss/components_user_facing/_control-bar.scss
+++ b/meinberlin/assets/scss/components_user_facing/_control-bar.scss
@@ -48,17 +48,6 @@
     }
 }
 
-.control-bar__bottom--projects div:last-child {
-    text-align: right;
-    margin-bottom: 1em;
-    margin-top: 1em;
-
-    @media screen and (min-width: $breakpoint-palm) {
-        margin-bottom: 0;
-        margin-top: 0;
-    }
-}
-
 .modul-facetingform .facetingform__container .control-bar__checkboxes {
     margin-bottom: 1.5em;
 }
